--- a/pr2_arm_kinematics/CMakeLists.txt
+++ b/pr2_arm_kinematics/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Catkin CMake Standard: http://www.ros.org/doc/groovy/api/catkin/html/user_guide/standards.html
 cmake_minimum_required(VERSION 2.8.3)
 project(pr2_arm_kinematics)
-
+set(CMAKE_CXX_FLAGS "-std=c++11")
 find_package(Boost REQUIRED thread)
 find_package(catkin REQUIRED COMPONENTS roscpp angles tf_conversions urdf geometry_msgs kdl_parser moveit_msgs moveit_core pluginlib cmake_modules)
 find_package(Eigen REQUIRED)
