--- a/pr2_arm_kinematics/package.xml
+++ b/pr2_arm_kinematics/package.xml
@@ -33,6 +33,10 @@
   <run_depend>pluginlib</run_depend>
   <run_depend>moveit_msgs</run_depend>
 
+  <build_depend>message_generation</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <run_depend>message_runtime</run_depend>
+  <run_depend>std_msgs</run_depend>
 <export>
     <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lpr2_arm_kinematics_lib" cflags="-I${prefix}/include"/>
     <kinematics_base plugin="${prefix}/kinematics_plugins.xml"/>
